<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/item1"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/item1"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/item2"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/item2"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/item3"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/item3"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/item4"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/item4"
        app:showAsAction="ifRoom"/>
</menu>